# ReadBFSWindows

./: .gitignore  AutoLocker.h  BPlusTree.cpp  BPlusTree.h  BPlusTree.patch  CMakeLists.txt  Cache.cpp  Cache.h  CachedBlock.h  Copy of TreeControl.cpp  Debug.h  DiskFunc.cpp  DiskFunc.h  DoublyLinkedList.h  Index.cpp  Inode.cpp  Journal.h  Lock.h  Query.cpp  README.md  SkyfsInterface.cpp  SkyfsInterface.h  SupportDefs.h  SupportFunctions.cpp  SupportFunctions.h  System.cpp  System.h  TreeControl.cpp  TreeControl.dsp  TreeControl.dsw  TreeControl.sln  TreeControl.vcproj  Volume.cpp  Volume.h  bfs_endian.h  inode.patch  logging.h  myntddk.h  native.h  system_dependencies.h
.github/workflows/: cmake-single-platform.yml
resource/: TreeControl.rsrc.rc  resource.h
src/: DiskFunc.cpp  DiskFunc.h  SkyfsInterface.cpp  SkyfsInterface.h  SupportFunctions.cpp  SupportFunctions.h  System.cpp  System.h  TreeControl.cpp  logging.h
src/bfs/: Attribute.cpp  Attribute.h  AutoLocker.h  BlockAllocator.cpp  Cache.cpp  Debug.cpp  Hash.cpp  Hash.h  Inode.cpp  Inode.h  Journal.cpp  Stack.h  SupportDefs.h  Volume.cpp  bfs.h  system_dependencies.h
src/testApp/: diskIO2.cpp  testApp.cpp  testApp.vcproj  testApp.vcxproj  testApp.vcxproj.filters
testApp/: diskIO2.cpp  testApp.cpp  testApp.vcproj
